# aribcap-dump

./: .clang-format  .editorconfig  .editorconfig-checker.json  .envrc.example  .gitignore  .gitmodules  .mega-linter.yml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CPPLINT.cfg  flake.nix
.github/workflows/: mega-linter.yml
cmake/: BuildTSDuck.cmake  InstallTSDuck.cmake
docs/: linting.md
pkgs/aribcap-dump/: default.nix
pkgs/catch2-vendor/: default.nix
pkgs/libaribcaption-vendor/: default.nix
pkgs/tsduck-vendor/: default.nix
scripts/: mega-linter.sh
src/: main.cc
src/core/: caption_classifier.cc  caption_classifier.hpp  caption_dumper.cc  caption_dumper.hpp  caption_record_emitter.cc  caption_record_emitter.hpp  eit_parser.cc  eit_parser.hpp  eit_record_emitter.cc  eit_record_emitter.hpp  output_record.cc  output_record.hpp  output_record_sink.cc  output_record_sink.hpp  packet_framer.cc  packet_framer.hpp  program_clock.cc  program_clock.hpp  ts_utils.cc  ts_utils.hpp
tests/: caption_classifier_test.cc  caption_dumper_test.cc  caption_record_emitter_test.cc  eit_parser_test.cc  eit_record_emitter_test.cc  eit_test_utils.hpp  output_record_json_test.cc  packet_framer_test.cc  pes_test_utils.hpp  pmt_test_utils.hpp  program_clock_test.cc  tot_test_utils.hpp  ts_utils_test.cc
